# Homework_2.10.2

./: CMakeLists.txt  equil_tri.cpp  figure.cpp  figure.h  isos_tri.cpp  isos_tri.h  main.cpp  parallelogram.cpp  quadrangle.cpp  quadrangle.h  rectangle.cpp  rectangle.h  rhomb.cpp  rhomb.h  right_tri.cpp  right_tri.h  square.cpp  square.h  triangle.cpp  triangle.h
