cmake_minimum_required (VERSION 3.22.0)
project(cmake_homework_6.3)
add_executable(cmake_homework_6.3_program main.cpp equil_tri.cpp equil_tri.h figure.cpp figure.h isos_tri.cpp isos_tri.h parallelogram.h parallelogram.cpp quadrangle.h quadrangle.cpp rectangle.h rectangle.cpp rhomb.h rhomb.cpp right_tri.h right_tri.cpp square.h square.cpp triangle.h triangle.cpp)